resource now local, new logo, improve UI, more clean HTML

--- a/CBT/templates/index.html
+++ b/CBT/templates/index.html
@@ -16,7 +16,7 @@
                 <a class="btn btn-success btn-lg text-uppercase js-scroll-trigger mb-2" href="{% url 'test:resume' %}">Lanjut Mengerjakan</a>
                 <a class="btn btn-success btn-lg text-uppercase js-scroll-trigger mb-2" href="{% url 'test:findScore' %}">Pengumuman Nilai</a>
                 <p class="mt-1"><hr></p>
-                <a class="mb-4 btn btn-warning btn-lg text-uppercase js-scroll-trigger" href="#">Buat Sebuah Test</a>
+                <a class="mb-4 btn btn-warning btn-lg text-uppercase js-scroll-trigger" href="{% url 'create:firstPage' %}">Buat Sebuah Test</a>
               </div>
             </div>
           </div>
