--- a/CBT/templates/snippets/base.html
+++ b/CBT/templates/snippets/base.html
@@ -12,49 +12,58 @@
     </title>
     {% block extrahead %}{% endblock extrahead %}
     {% block stylesheet %}
-      <link rel="stylesheet" type="text/css" href="{% static "/styles/styles.css" %}">
+      <link rel="stylesheet" type="text/css" href="{% static '/styles/styles.css' %}">
       {% endblock stylesheet %}
     {% block vendor_css %}
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">      {% endblock vendor_css %}
+      <link rel="stylesheet" href="{% static 'vendor/bootstrap/bootstrap.min.css' %}">      
+      <link href="{% static 'fonts/montserrat.css' %}" rel='stylesheet'>
+    {% endblock vendor_css %}
     {% block default_fonts %}
-      <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
       <style>
         body {
           font-family: 'Montserrat';
           font-size: 18px;
-        }</style>
+        }
+        </style>
       {% endblock default_fonts %}
 
-    {% block head_script %}
-<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>      {% endblock head_script %}
-
+    {% block head_script %}{% endblock head_script %}
   </head>
-  <body style="min-height:100vh;overflow-x:hidden;">
-{% block no_container %}
-       <div class="container-lg h-100 mt-4">
-         <div class="d-flex container-fluid h-100">
-    {% block main_container %}
-    {% block card %}  
-    {% endblock card %}
-    {% endblock main_container %}<br><br>
-    </div>      
-  </div>
-  {% endblock no_container %}
-{% block Footer %}
-{% endblock Footer %}
-{% block vendor_script %}
- <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
- {% endblock vendor_script%}
+  <body style="min-height:100vh">
+    {% block no_container %}
+    <div class="container-xl px-3 h-100" >
+      <div class="row py-4 h-100" style="min-height:100vh;">
+        <div class="d-flex flex-wrap text-center flex-fill align-content-between">
+          {% block header %}
+          <header class="w-100">
+            {% include 'snippets/sitebanner.html' %}
+          </header>
+          {% endblock header %}
+          <main class="flex-fill w-100">
+            {% block main_container %}
+              
+            {% endblock main_container %}
+          </main>
+            
+          {% block footer %}
+          <footer class="w-100 d-flex mt-3">
+            {% include 'snippets/footer.html' %}
+            </footer>
+          {% endblock footer %}
+          </div>
+        </div>
+      </div>
+
+    {% endblock no_container %}
+    {% block vendor_script %}
+      <script src="{% static 'vendor/jquery/jquery-3.6.0.min.js' %}"></script>
+      <script src="{% static 'vendor/bootstrap/bootstrap.bundle.min.js' %}"></script>
+    {% endblock vendor_script%}
     {% block add_vendor %}
-          <script src="{% static 'script/scripts.js' %}"></script> 
+      <script src="{% static 'script/scripts.js' %}"></script> 
     {% endblock add_vendor %}
-
-    {% block user_script %}
-
-        {% endblock user_script %}
-
-
-{% block wysiwyg_script %}
-
-{% endblock wysiwyg_script %}
+    {% block user_script %}{% endblock user_script %}
+    {% block wysiwyg_script %}
+      <script src="{% static 'vendor/quill/quill.min.js' %}"></script>
+    {% endblock wysiwyg_script %}
 </body>
