--- a/CreateTest/templates/CreateTest/editQuestion.html
+++ b/CreateTest/templates/CreateTest/editQuestion.html
@@ -1,29 +1,33 @@
 {% extends 'CreateTest/snippets/base.html' %}
 {% load static %}
 {% load widget_tweaks %}
-{% block user_head_script %}
-  {{form.media}}
-<script src="{% static 'script/image-resize.js' %}"></script>
-<script src="https://unpkg.com/quill-image-compress@1.2.11/dist/quill.imageCompressor.min.js"></script>
-<script>
-Quill.register("modules/imageCompressor", imageCompressor)
-
-</script>
-{% endblock user_head_script %}
 {% block nav_brand %}
-  Dashboard Administrasi Tes 
+Dashboard Administrasi Tes 
 {% endblock nav_brand %}
 {% block no_container %}
 <div class="container-fluid  p-0 mx-2 pr-3 my-1 flex-column">
-<div class="d-flex flex-row">
-<a href="{% url 'create:question' %}" class="btn btn-outline-secondary p-2 m-1 text-nowrap">&laquo; Kembali</a>
-<a href="{% url 'create:questionID' 'new' %}" class="btn btn-block p-2 m-1 btn-outline-primary">Tambahkan Soal Lain</a>
+  <div class="d-flex flex-row">
+    <a href="{% url 'create:question' %}" class="btn btn-outline-secondary p-2 m-1 text-nowrap">&laquo; Kembali</a>
+    <a href="{% url 'create:questionID' 'new' %}" class="btn btn-block p-2 m-1 btn-outline-primary">Tambahkan Soal Lain</a>
 <a href="delete" class="btn btn-block p-2 m-1 btn-outline-danger">Hapus Soal</a>
+</div>
+<div class="d-flex flex-wrap">
+  <p class="my-1 mr-2">Soal No :</p>
+
+  <nav aria-label="Quest navigation">
+  {% for i in question_list %}
+      {% if i.questionNum == question.questionNum %}
+      <a class="btn btn-outline-primary active my-1" href="../{{i.questID}}">{{i.questionNum}}</a>
+      {% else %}
+      <a class="btn btn-outline-primary my-1" href="../{{i.questID}}">{{i.questionNum}}</a>
+      {% endif %}
+      {% endfor %}
+  </nav>
 </div>
 
 <form  method="post" class=5>
-    {% if form.errors %}
-<div class="alert alert-danger" role="alert">
+  {% if form.errors %}
+  <div class="alert alert-danger" role="alert">
     {% for field, errors in form.errors.items %}
     {% for error in errors %}
     <b>{{ field }}</b>: {{ error }}
@@ -40,7 +44,7 @@ Quill.register("modules/imageCompressor", imageCompressor)
 </div>
 <p class="my-1">Pilihan Jawaban:</p>
     {% for i in choice %}
-    {% if i.choice == None  %}
+    {% if i.choice == '<p><br></p>' or i.choice == '' %}
     <div class=" my-1 popover-item">
         <a href="?choice={{forloop.counter}}" data-toggle="modal" data-target="#Modal{{forloop.counter}}" class="btn btn-outline-success  text-left btn-block">Tambahkan Pilihan {{forloop.counter}}</a>
             <div class="popover-content">
@@ -52,31 +56,42 @@ Quill.register("modules/imageCompressor", imageCompressor)
         </div>
     {% else %}
     <div class="my-1 popover-item">
-    <a href="?choice={{forloop.counter}}" data-toggle="modal" data-target="#Modal{{forloop.counter}}" class=" btn btn-outline-success text-left btn-block">{{i.choice |safe}}
+    <a href="?choice={{forloop.counter}}" data-toggle="modal" data-target="#Modal{{forloop.counter}}" class=" btn btn-outline-success text-left btn-block">
+    <span class="remove-all-styles ql-editor">
+      {{i.choice |safe}}
+    </span>
     </a>
-            <div class="popover-content">
-                <small><h6 class="text-white">
-                Klik Untuk Mengubah Pilihan
-                </h6>
-                </small> 
+    <div class="popover-content">
+      <small><h6 class="text-white">
+        Klik Untuk Mengubah Pilihan
+      </h6>
+    </small> 
                 </div>
-        </div>
-
-    {% endif %}
-    {% endfor %}
+              </div>
+              
+              {% endif %}
+              {% endfor %}
     {% include 'CreateTest/snippets/modalchoice.html' %}
-
-  <p class="my-1">Kunci Jawaban :</p>
-      <label class="px-5 my-1 btn btn-outline-success btn-block rounded "data-toggle="modal" data-target="#ModalAnswerKey"><span class="btn-label h3"><span class="glyphicon glyphicon-chevron-right">&raquo;</span></span>
-      <span id="answerKey">
-      {% if answerKey == "" or None %}
+    
+    <p class="my-1">Kunci Jawaban :</p>
+      <label class="pl-5 my-1 btn btn-outline-success btn-block rounded "data-toggle="modal" data-target="#ModalAnswerKey"><span class="btn-label h3"><span class="glyphicon glyphicon-chevron-right">&raquo;</span></span>
+        <span id="answerKey">
+          {% if answerKey == "" or answerKey == 'None' %}
       Tetapkan Kunci Jawaban
       {% else %}
       {{answerKey | safe}}
 
       {% endif %}
       </span></label>
-      
+  <div class="form-group">
+    <label for="id_trueScore">Skor Benar</label>
+    {{form.trueScore|add_class:"form-control"}}
+    </div>
+    <div class="form-group">
+      <label for="id_falseScore">Skor Salah</label>
+      {{form.falseScore |add_class:"form-control"}}
+    </div> 
+    {{form.answerKey}}
     <a href="{% url 'create:questionID' 'new' %}" class="btn btn-block p-2 my-4 btn-lg btn-outline-primary">Tambahkan Soal Lain</a>
 <div class="modal fade" id="ModalAnswerKey" tabindex="-1" role="dialog" aria-labelledby="ModalAnswerKeyLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
@@ -90,11 +105,11 @@ Quill.register("modules/imageCompressor", imageCompressor)
         <div class="modal-body">
         <div class="btn-group btn-group-toggle d-flex flex-column" data-toggle="buttons">
           {% for radio  in form.answerKey %}
-            {% if radio.choice_label %}
-                <label class="px-5 my-1 btn btn-outline-success btn-block rounded"><span class="btn-label h3"><span class="glyphicon glyphicon-chevron-right">&raquo;</span></span>
-                {{radio.tag}}<span id="choice{{forloop.counter}}">{{radio.choice_label |safe }}</span></label>
-                </label>
-              {% else %}
+            {% if radio.choice_label == '<p><br></p>' or radio.choice_label == ''%}
+            {% else %}
+            <label class="pl-5 my-1 btn btn-outline-success btn-block rounded"><span class="btn-label h3"><span class="glyphicon glyphicon-chevron-right">&raquo;</span></span>
+            {{radio.tag}}<span id="choice{{forloop.counter}}"class="remove-all-styles ql-editor">{{radio.choice_label |safe }}</span></label>
+            </label>
               {% endif %}
           {% endfor %}
           </div>
@@ -106,8 +121,9 @@ Quill.register("modules/imageCompressor", imageCompressor)
         </div>
     </div>
     </div>
-
+  
 {% endblock no_container %}
+
 {% block user_script %}
 <script>
 
